<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="143dp"
        android:ems="10"
        android:hint="@string/et_text_input"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cbStopWatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="144dp"
        android:text="@string/cb_stopwatch"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbStopWatch">

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="4"
            app:rowCount="11">

            <ImageView
                android:id="@+id/ivCalendar"
                app:layout_column="0"
                app:layout_gravity="fill"
                app:layout_row="0"
                app:layout_rowSpan="2"
                app:srcCompat="@drawable/calendar"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvPeriodExecution"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/period_of_execution"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_column="1"
                app:layout_row="0" />

            <TextView
                android:id="@+id/tvSubtextExecution"
                android:layout_marginStart="10dp"
                android:text="@string/today"
                android:textSize="15sp"
                app:layout_column="1"
                app:layout_row="1" />

            <ImageView
                android:id="@+id/ivComments"
                app:layout_column="0"
                app:layout_gravity="fill"
                app:layout_row="2"
                app:layout_rowSpan="2"
                app:srcCompat="@drawable/comments_task"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvComments"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/comments"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_column="1"
                app:layout_row="2" />

            <TextView
                android:id="@+id/tvSubtextComments"
                android:layout_marginStart="10dp"
                android:text="@string/no_comments"
                android:textSize="15sp"
                app:layout_column="1"
                app:layout_row="3" />

            <ImageView
                android:id="@+id/ivReminder"
                app:layout_column="0"
                app:layout_gravity="fill"
                app:layout_row="4"
                app:layout_rowSpan="2"
                app:srcCompat="@drawable/reminder"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvReminder"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/reminders"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_column="1"
                app:layout_row="4" />

            <TextView
                android:id="@+id/tvSubtextReminder"
                android:layout_marginStart="10dp"
                android:text="@string/reminders_not"
                android:textSize="15sp"
                app:layout_column="1"
                app:layout_row="5" />

            <ImageView
                android:id="@+id/ivFlag"
                app:layout_column="0"
                app:layout_gravity="fill"
                app:layout_row="6"
                app:layout_rowSpan="2"
                app:srcCompat="@drawable/flag"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvPriority"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/priority"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_column="1"
                app:layout_row="6" />

            <TextView
                android:id="@+id/tvSubtextPriority"
                android:layout_marginStart="10dp"
                android:text="@string/priority_4"
                android:textSize="15sp"
                app:layout_column="1"
                app:layout_row="7" />

            <ImageView
                android:id="@+id/ivLabel"
                app:layout_column="0"
                app:layout_gravity="fill"
                app:layout_row="8"
                app:layout_rowSpan="2"
                app:srcCompat="@drawable/label_task"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvLabel"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/labels"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_column="1"
                app:layout_row="8" />

            <TextView
                android:id="@+id/tvSubLabel"
                android:layout_marginStart="10dp"
                android:text="@string/no_labels"
                android:textSize="15sp"
                app:layout_column="1"
                app:layout_row="9" />

        </androidx.gridlayout.widget.GridLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>